--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -1,27 +1,12 @@
 aside {
     width: 300px;
     height: 100vh;
+    padding:  0 10px;
     color: #252525;
     background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    text-align: start;
-
-    header {
-        h2 {
-            font-size: 24px;
-            color: #6122b4;
-            line-height: 1.1;
-        }
-    }
-
-    main {
-        flex: 1;
-        background-color: #6122b4;
-        width: 100%;
-    }
-
+    text-align: left;
 }
 
 .module {
