--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap');
+
 * {
   box-sizing: border-box;
+  font-family: "Konkhmer Sleokchher", system-ui;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
   padding: 0;
+  
 }
 
+:root{
+  --main-color: #4361EE;
+  --main-bg-color: #fff;
+  --selected-text-color: #fff;
+  --selected-color: #6981F1;
+  --hover-bg-color: #D9DFFC;
+  --primary-text-color: #252525;
+  --dark-text-color: #475569;
+  --text-color: #65758C;
+  --placeholder-color: #676767;
+  --bg-color: #F6F6F6;
+  --border-color: #D3D6DB;
+  --check-color: #009C00;
+  
+}
 #root {
+  color: var(--primary-text-color);
   display: flex;
+  background-color: var(--bg-color);
 }
 
 .main{
