Fix sidebar hover style to only apply when not active

--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -51,7 +51,7 @@ aside {
                 background-color: var(--selected-color);
                 color: var(--selected-text-color);
             }
-            &:hover{
+            &:not(.active):hover{
                 background-color: var(--hover-bg-color);
             }
         }
