--- a/src/pages/Venta.css
+++ b/src/pages/Venta.css
@@ -2,37 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    padding: 10px;
+    padding: 10px 15px;
     max-width: 100%;
+    width: 50%;
     border-radius: 16px;
-}
-
-.product-selector{
-    background-color: var(--selected-text-color);
-    border: 1px solid var(--border-color);
-    min-height: 80%;
-    > .product-header{
-        > .title-header{
-            display: flex;
-            justify-content: space-between;
-            > h3{
-                font-size: 2rem;
-            }
-        }
-        > .product-search{
-            background-color: aqua;
-            > .search{
-                color: var(--dark-text-color);
-                display: block;
-            }
-
-            > .product-input{
-                padding: 6px 10px;
-                border: 1px solid var(--border-color);
-                background-color: var(--main-bg-color);
-                border-radius: 8px;
-                font-size: .75rem;
-            }
-        }
-    }
 }
